[metadata]
name = aesthetic_ascii
version = 1.0
author = Sarajul Md
author_email = msarajul72@gmail.com
description = Test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarajul430/demo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True